--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,12 +1,13 @@
 .container{
     display:flex;
-
+    width:700px !important;
 }
 .textContainer{
     flex:1;
     display: flex;
     flex-direction: column;
     gap:20px;
+    width:700px !important;
 }
 .brands{
     width:800px;
@@ -26,6 +27,7 @@
 
 .desc{
     font-size: 20px;
+    width:700px !important;
 }
 .buttons{
     display:flex;
